# shoot_enemy_with_opengl_glfw

./: CMakeLists.txt  README.md  makefile
src/: CMakeLists.txt  circle.cc  circle.h  colliding.cc  colliding.h  enemy.cc  enemy.h  game.cc  game.h  main.cc  object.cc  object.h  player.cc  player.h  player_bullet.cc  player_bullet.h  vector2.h
src/shader_operator/: shader_operator  shader_operator.cc  shader_operator.h
